lessons/5.kubernetes-network/ingress-with-path.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: my.example.com
    http:
      paths:        
      - backend:
          serviceName: my-service
          servicePort: 80
        path: /api
