lessons/5.kubernetes-network/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /mytest        
        backend:
          serviceName: my-service
          servicePort: 80
